--- a/src/styles/pages/events-page.css
+++ b/src/styles/pages/events-page.css
@@ -44,52 +44,26 @@
     font-weight: lighter;
     width: 1200px;
     margin: 0 auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 60px;
     border-radius: 20px;
     padding: 20px;
     background-color: #fe8926;
-    display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.container-box2 {
-    color: #103955;
-    font-weight: lighter;
-    width: 1200px;
-    margin: 0 auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    border-radius: 20px;
-    padding: 20px;
-    background-color: #fe8926;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 
 /******************** game form style ********************/
 
 .container-form {
     font-family: 'Poppins', sans-serif;
-    background-color: #fe8926;
-    width: 900px;
-    margin: 0 auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    border-radius: 20px;
-    padding: 20px;
-    display: flex;
+    margin-left: 40px;
+    width: 700px;
     justify-content: center;
     align-items: center;
 }
-
 
 form {
     display: flex;
@@ -106,19 +80,20 @@ label {
 input {
     font-family: 'Poppins', sans-serif;
     padding: 10px;
-    border-radius: 20px;
     border: none;
 }
 
 .container-form .addgame {
+    font-family: 'Poppins', sans-serif;
     background-color: #103955;
-    color: #fe8926;
+    color: white;
     border: none;
-    border-radius: 20px;
+    border-radius: 50px;
     cursor: pointer;
 }
+
 .container-form .addgame:hover {
-    background-color: #104b72;
+    background-color: #fe8926;
   }
 
 /*
